# fezi-site

./: .env  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env  .env.prod  Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_alter_menuitem_image.py
backend/core/: settings.py  urls.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(pages)/(Homepage)/: page.tsx
frontend/src/app/(pages)/agb/: page.tsx
frontend/src/app/(pages)/datenschutz/: page.tsx
frontend/src/app/(pages)/feiern/: page.tsx
frontend/src/app/(pages)/impressum/: page.tsx
frontend/src/app/(pages)/kontakt/: page.tsx
frontend/src/app/(pages)/lage/: page.tsx
frontend/src/app/(pages)/menue/: page.tsx
frontend/src/app/(pages)/oeffnungszeiten/: page.tsx
frontend/src/app/(pages)/reservierung/: page.tsx
frontend/src/app/(pages)/reservierung/events-feiern/: page.tsx
frontend/src/app/(pages)/reservierung/tischplatz/: page.tsx
frontend/src/app/(pages)/ueber-uns/: page.tsx
frontend/src/app/lib/: api.ts  types.ts  utils.ts
frontend/src/app/ui/layout/: Navbar.tsx
frontend/src/app/ui/menue/: Menue.tsx  Pagination.tsx  Search.tsx
frontend/src/app/ui/reservation/: Confirmation.tsx  FormDataInput.tsx  TimeSelection.tsx
nginx/: nginx.conf
